--- a/client/app/modules/notification/templates/socketToast.tpl.html
+++ b/client/app/modules/notification/templates/socketToast.tpl.html
@@ -1,8 +1,3 @@
 <material-toast style="padding-left:0px;padding-right:0px;" >
-    <ng-include src="'modules/notification/templates/include/challenge-notif.tpl.html'" ng-if="notif.type == 'challenge'"></ng-include>
-    <ng-include src="'modules/notification/templates/include/project-notif.tpl.html'" ng-if="notif.type == 'project'"></ng-include>
-    <ng-include src="'modules/notification/templates/include/file-notif.tpl.html'" ng-if="notif.type == 'file'"></ng-include>
-    <ng-include src="'modules/notification/templates/include/url-notif.tpl.html'" ng-if="notif.type == 'url'"></ng-include>
-    <ng-include src="'modules/notification/templates/include/note-notif.tpl.html'" ng-if="notif.type == 'note'"></ng-include>
-    <ng-include src="'modules/notification/templates/include/member-notif.tpl.html'" ng-if="notif.type == 'member'"></ng-include>
+    <notification notification="notification">
 </material-toast>
