--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -10,7 +10,7 @@
                     Organizations or individuals post challenges, which are like competitions, and people suggest projects that meet this challenge. Anyone can follow and join a project to help develop it.
                 </p>
                 <div>
-                    <material-button ng-click="toSignUp()"  class="material-button-raised material-button-colored">GET INVOLVED</material-button>
+                    <material-button ui-sref="signup" class="material-button-raised material-button-colored">GET INVOLVED</material-button>
                 </div>
             </section>
             <section class="my-carousel carousel-home  center" ng-if="challenge.intro == 2" >
@@ -51,71 +51,9 @@
 
 
     </article>
-    <form name="signupForm" id="signupForm" ng-controller="RegisterCtrl"  flex-sm="50" ng-submit="registerUser(signup)" style="margin:auto;width:80%;">
-        <div class="center">
-            <img src="images/svg/Joinus.svg" alt="Join Us"/>
-        </div>
-        <material-input-group>
-            <label for="username">Username</label>
-            <material-input id="username" type="text" ng-model="signup.username" required name="username"/>
-        </material-input-group>
-        <div ng-messages="signupForm.username.$error" ng-if="!signupForm.username.$pristine">
-            <div ng-message="required" class="form-message">
-                Username is required
-            </div>
-        </div>
-        <material-input-group>
-            <label for="emailS">Email</label>
-            <material-input id="emailS" type="text" ng-model="signup.email" required name="email"/>
-        </material-input-group>
-        <div ng-messages="signupForm.email.$error" ng-if="!signupForm.email.$pristine">
-            <div ng-message="required" class="form-message">
-                Email is required
-            </div>
-        </div>
-        <tag-manager entity="signup"></tag-manager>
-        <material-input-group>
-            <label for="passwordR">Password</label>
-            <material-input id="passwordR" type="password" ng-model="signup.password" required name="password"/>
-        </material-input-group>
-        <div ng-messages="signupForm.password.$error" ng-if="!signupForm.password.$pristine">
-            <div ng-message="required" class="form-message">
-                Password is required
-            </div>
-        </div>
-        <material-input-group >
-            <label for="passwordCheck">Repeat your password</label>
-            <material-input id="passwordCheck" type="password" ng-model="check.password" required name="passwordR"/>
-        </material-input-group>
-        <div ng-messages="signupForm.passwordR.$error" ng-if="!signupForm.passwordR.$pristine">
-            <div ng-message="required" class="form-message">
-                Password is required
-            </div>
-        </div>
-        <div>
-            <ui-select ng-model="signup.localisation"
-                       theme="selectize"
-                       reset-search-input="false">
-                <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
-                <ui-select-choices repeat="address in addresses track by $index"
-                                   refresh="refreshAddresses($select.search)"
-                                   refresh-delay="0">
-                    <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
-                </ui-select-choices>
-            </ui-select>
-        </div>
-        <material-checkbox name="read" required>
-            <small>
-                I have read the terms of service
-            </small>
-        </material-checkbox>
-        <div ng-messages="signupForm.read.$error" ng-if="!signupForm.passwordR.$pristine">
-            <div ng-message="required" class="form-message">
-                You must check the box
-            </div>
-        </div>
-        <material-button style="width:100%;" class="material-button-raised" type="submit" ng-disabled="signupForm.$invalid">Register</material-button>
-    </form>    
+
+    <br>
+    <br>
 
     <!--<ng-include src="'modules/footer/templates/footer.tpl.html'"></ng-include>-->
 
