add edition of user profil and notification button and move of signout button

--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -14,13 +14,10 @@
             <i class="fa" ng-class="{ 'fa-thumbs-up' : !isFollowing, 'fa-thumbs-down' : isFollowing }"></i>
         </material-button>
     </material-toolbar>
-    <br>
-    <a href="" layout-align="center" style="text-align: right; margin-right: 10px;">
-        <material-button id="signout" class="material-button-raised material-theme-red" ng-click="signout()" >
-            <i class="fa fa-sign-out">Signout</i>
-        </material-button>
-    </a>
     <material-content flex>
+        <material-button ng-if="profile._id == currentUser._id" ui-sref="profileAdmin({uid: profile._id})">
+            <i class="fa fa-pencil-square-o baseColor"></i> Edit
+        </material-button>
         <showtags entity="profile" style="margin-left: 50px;"></showtags>
         <h3>Presentation</h3>
         <div ng-bind-html="profile.secureBrief"></div>
