--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -78,4 +78,16 @@ header{
   height: 25px;
 }
 
+.top-bar-icon .tooltip-topbar-icon {
+  display: none;
+  position: absolute;
+  color: white;
+  background-color: #152661;
+  border: 1px black solid;
+}
+
+.top-bar-icon:hover .tooltip-topbar-icon {
+  display: block;
+}
+
 @import "../modules/common/sass/media-queries";
