Hotfix: Fixed icons in workspace

--- a/client/app/modules/workspace/templates/notes.tpl.html
+++ b/client/app/modules/workspace/templates/notes.tpl.html
@@ -7,17 +7,17 @@
             {{ note.title }}
             <material-tab ui-sref="workspace.etherpad">
                 <material-label>
-                    <i class='fa fa-trello fa-2x'></i>
+                    <i class='fa fa-file-text fa-2x'></i>
                 </material-label>
             </material-tab>
             <material-tab ui-sref="workspace.files">
                 <material-label>
-                    <i class='fa fa-file fa-2x'></i>
+                    <i class='fa fa-paperclip fa-2x'></i>
                 </material-label>
             </material-tab>
             <material-tab ui-sref="workspace.resources">
-                <material-label style="font-size:2em">
-                    @
+                <material-label>
+                    <i class='fa fa-link fa-2x'></i>
                 </material-label>
             </material-tab>
         </material-tabs>
